# hetzner-cd

./: LICENSE  README.md  pyproject.toml
location-stories/: inventory.yaml
location-stories/cd/: README.md  galaxy.yml  initialize-vm.yml
location-stories/cd/roles/common/defaults/: main.yml
location-stories/cd/roles/common/files/: ntp.conf
location-stories/cd/roles/common/tasks/: main.yml
location-stories/cd/roles/disk-partition/defaults/: main.yml
location-stories/cd/roles/disk-partition/tasks/: main.yml
location-stories/cd/roles/pre-installation/defaults/: main.yml
location-stories/cd/roles/pre-installation/handlers/: main.yml
location-stories/cd/roles/pre-installation/tasks/: main.yml
location-stories/cd/roles/pre-installation/tests/: test.yml
location-stories/cd/roles/pre-installation/vars/: main.yml
